--- a/0_basics.ipynb
+++ b/0_basics.ipynb
@@ -269,10 +269,10 @@
     {
      "data": {
       "text/plain": [
-       "{'bt': ['sganguly', 'rsharma', 'rsharma', 'rsharma'],\n",
+       "{'bt': ['rsharma', 'rdravid', 'klrahul', 'stendulkar'],\n",
        " 'wk': ['dhoni'],\n",
-       " 'all': ['kpandya', 'hpandya'],\n",
-       " 'bl': ['akumble', 'hsingh', 'bkumar', 'isharma']}"
+       " 'all': ['jadeja', 'hpandya'],\n",
+       " 'bl': ['zkhan', 'zkhan', 'anehra', 'zkhan']}"
       ]
      },
      "execution_count": 9,
@@ -294,7 +294,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['sganguly', 'rsharma', 'dhoni', 'kpandya', 'hpandya', 'akumble', 'hsingh', 'bkumar', 'isharma'])"
+       "dict_keys(['rsharma', 'rdravid', 'klrahul', 'stendulkar', 'dhoni', 'jadeja', 'hpandya', 'zkhan', 'anehra'])"
       ]
      },
      "execution_count": 10,
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "'rsharma'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -327,7 +327,7 @@
        "0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
        "dict_keys(['ind', 'saf', 'win', 'sri', 'aus'])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "1.0"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -379,7 +379,7 @@
        "1.0"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -460,16 +460,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "overall runs: 212\n",
+      "overall runs: 207\n",
       "balls: 300\n",
-      "wkts: 5\n"
+      "wkts: 8\n"
      ]
     },
     {
@@ -501,33 +501,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>170</td>\n",
+       "      <td>166</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>80</td>\n",
+       "      <td>81</td>\n",
        "      <td>1</td>\n",
-       "      <td>80</td>\n",
+       "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>26</td>\n",
+       "      <td>29</td>\n",
        "      <td>2</td>\n",
-       "      <td>52</td>\n",
+       "      <td>58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>17</td>\n",
+       "      <td>14</td>\n",
        "      <td>4</td>\n",
-       "      <td>68</td>\n",
+       "      <td>56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>-1</th>\n",
-       "      <td>5</td>\n",
+       "      <td>8</td>\n",
        "      <td>-1</td>\n",
-       "      <td>-5</td>\n",
+       "      <td>-8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -541,15 +541,15 @@
       ],
       "text/plain": [
        "    runs  score  run_sum\n",
-       " 0   170      0        0\n",
-       " 1    80      1       80\n",
-       " 2    26      2       52\n",
-       " 4    17      4       68\n",
-       "-1     5     -1       -5\n",
+       " 0   166      0        0\n",
+       " 1    81      1       81\n",
+       " 2    29      2       58\n",
+       " 4    14      4       56\n",
+       "-1     8     -1       -8\n",
        " 6     2      6       12"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
