--- a/0_basics.ipynb
+++ b/0_basics.ipynb
@@ -140,6 +140,13 @@
     "        self.bl_runs = 0\n",
     "        self.bl_balls = 0\n",
     "        self.m_wins = 0\n",
+    "    \n",
+    "    def updateRunProba(self):\n",
+    "        '''\n",
+    "        probability at which player scores runs\n",
+    "        default: {0: 0.6, 1: 0.23, 2: 0.1, 3: 0.005, 4: 0.054, 5: 0.001, 6: 0.01}\n",
+    "        '''\n",
+    "        pass\n",
     "        \n",
     "        \n",
     "    def update_bt_runs(self):\n",
@@ -269,10 +276,10 @@
     {
      "data": {
       "text/plain": [
-       "{'bt': ['rsharma', 'rdravid', 'klrahul', 'stendulkar'],\n",
+       "{'bt': ['stendulkar', 'rdravid', 'klrahul', 'rdravid'],\n",
        " 'wk': ['dhoni'],\n",
-       " 'all': ['jadeja', 'hpandya'],\n",
-       " 'bl': ['zkhan', 'zkhan', 'anehra', 'zkhan']}"
+       " 'all': ['kpandya', 'kpandya'],\n",
+       " 'bl': ['anehra', 'bkumar', 'akumble', 'rashwin']}"
       ]
      },
      "execution_count": 9,
@@ -289,12 +296,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['rsharma', 'rdravid', 'klrahul', 'stendulkar', 'dhoni', 'jadeja', 'hpandya', 'zkhan', 'anehra'])"
+       "dict_keys(['stendulkar', 'rdravid', 'klrahul', 'dhoni', 'kpandya', 'anehra', 'bkumar', 'akumble', 'rashwin'])"
       ]
      },
      "execution_count": 10,
@@ -314,7 +323,7 @@
     {
      "data": {
       "text/plain": [
-       "'rsharma'"
+       "'dhoni'"
       ]
      },
      "execution_count": 11,
@@ -333,7 +342,7 @@
     }
    ],
    "source": [
-    "PLNAME = 'rsharma'\n",
+    "PLNAME = list(team_list[TEAMNAME].players_obj_list.keys())[3]\n",
     "team_list[TEAMNAME].players_obj_list[PLNAME].p_name\n",
     "team_list[TEAMNAME].players_obj_list[PLNAME].bt_runs"
    ]
@@ -460,16 +469,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "overall runs: 207\n",
+      "overall runs: 240\n",
       "balls: 300\n",
-      "wkts: 8\n"
+      "wkts: 9\n"
      ]
     },
     {
@@ -507,33 +516,45 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>81</td>\n",
+       "      <td>67</td>\n",
        "      <td>1</td>\n",
-       "      <td>81</td>\n",
+       "      <td>67</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>29</td>\n",
+       "      <td>32</td>\n",
        "      <td>2</td>\n",
-       "      <td>58</td>\n",
+       "      <td>64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>14</td>\n",
+       "      <td>20</td>\n",
        "      <td>4</td>\n",
-       "      <td>56</td>\n",
+       "      <td>80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>-1</th>\n",
-       "      <td>8</td>\n",
+       "      <td>9</td>\n",
        "      <td>-1</td>\n",
-       "      <td>-8</td>\n",
+       "      <td>-9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>6</td>\n",
-       "      <td>12</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -542,14 +563,16 @@
       "text/plain": [
        "    runs  score  run_sum\n",
        " 0   166      0        0\n",
-       " 1    81      1       81\n",
-       " 2    29      2       58\n",
-       " 4    14      4       56\n",
-       "-1     8     -1       -8\n",
-       " 6     2      6       12"
+       " 1    67      1       67\n",
+       " 2    32      2       64\n",
+       " 4    20      4       80\n",
+       "-1     9     -1       -9\n",
+       " 6     3      6       18\n",
+       " 3     2      3        6\n",
+       " 5     1      5        5"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
