--- a/1_advanced.ipynb
+++ b/1_advanced.ipynb
@@ -44,46 +44,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "p_names = {\n",
     "    'ind': {\n",
-    "        'bt': ['rsharma', 'klrahul', 'vkohli', 'arahane', 'stendulkar', 'rdravid', 'sganguly'], \n",
-    "        'wk': ['dhoni'], 'all': ['hpandya', 'jadeja', 'kpandya', 'ysingh'], \n",
+    "        'bt': ['ggambhir', 'vsehwag', 'rsharma', 'klrahul', 'vkohli', 'arahane', 'stendulkar', 'rdravid', 'sganguly'], \n",
+    "        'wk': ['dhoni', 'dkartik', 'rpant'], 'all': ['hpandya', 'rjadeja', 'kpandya', 'ysingh'], \n",
     "        'bl': ['bkumar', 'rashwin', 'mdshami', 'bumrah', 'akumble', 'hsingh', 'isharma', 'zkhan', 'anehra']\n",
     "    }, \n",
     "           \n",
     "    'aus': {\n",
     "        'bt': ['mhayden', 'rponting', 'mhussey', 'jlanger', 'ssmith'], \n",
-    "        'wk': ['agilchrist'], 'all': ['symonds', 'abitchell'], \n",
-    "        'bl': ['swarne', 'mmarsh', 'blee', 'gmcgrath']\n",
+    "        'wk': ['agilchrist'], 'all': ['mclarke', 'asymonds', 'abitchell'], \n",
+    "        'bl': ['swarne', 'mstark', 'blee', 'gmcgrath']\n",
     "    }, \n",
     "    \n",
     "    'saf': {\n",
-    "        'bt': ['gkirsten', 'bdipenner', 'abdevilliers', 'hgibbs', 'faulkner', 'gsmith'], \n",
-    "        'wk': ['mboucher'], 'all': ['spollock', 'kallis'], \n",
-    "        'bl': ['adonald', 'mntini', 'dsteyn']\n",
+    "        'bt': ['gkirsten', 'bdipenner', 'abdevilliers', 'hgibbs', 'jfaulkner', 'gsmith'], \n",
+    "        'wk': ['mboucher'], 'all': ['spollock', 'kallis', 'lklusener'], \n",
+    "        'bl': ['adonald', 'mntini', 'dsteyn', 'nboye']\n",
     "    }, \n",
     "    \n",
     "    'win': {\n",
-    "        'bt': ['cgayle', 'whinds', 'blara', 'schanderpaul'], \n",
-    "        'wk': ['keepr'], 'all': ['pollard', 'bravo'], \n",
-    "        'bl': ['bkumar', 'rashwin', 'mdshami', 'bumrah']\n",
+    "        'bt': ['cgayle', 'whinds', 'blara', 'schanderpaul', 'dsammy'], \n",
+    "        'wk': ['npooran', 'dramdin'], 'all': ['pollard', 'dbravo', 'arussell', 'cbrathwaite'], \n",
+    "        'bl': ['snarine', 'kroach', 'jholder', 'mdjason', 'ahosein']\n",
     "    }, \n",
     "    \n",
     "    'sri': {\n",
-    "        'bt': ['kaluwithrana', 'atapattu', 'jayavardene'], \n",
-    "        'wk': ['sangakara'], 'all': ['jayasuriya', 'adesilva'], \n",
-    "        'bl': ['cvaas', 'murali', 'fernando', 'yokumar']\n",
+    "        'bt': ['matapattu', 'mjayavardene', 'aranatunga', 'tdilshan', 'mahanama'], \n",
+    "        'wk': ['sangakara', 'kaluwithrana'], 'all': ['sjayasuriya', 'adesilva'], \n",
+    "        'bl': ['cvaas', 'mmurali', 'dfernando', 'yokumar', 'amendis']\n",
     "    }\n",
     "          }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,6 +112,31 @@
     "    dict_sum = pd.Series(list(temp_proba.values())).sum()\n",
     "    return {k: v/dict_sum for k, v in list(temp_proba.items())}  # normalize so sum of proba = 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reset_team_compos(team_name):\n",
+    "    compos_dict = {\n",
+    "        'ind': {'bt': 5, 'wk': 1, 'all': 2, 'bl': 3}, \n",
+    "        'aus': {'bt': 4, 'wk': 1, 'all': 3, 'bl': 3}, \n",
+    "        'saf': {'bt': 4, 'wk': 1, 'all': 2, 'bl': 4},\n",
+    "        'win': {'bt': 4, 'wk': 1, 'all': 2, 'bl': 4},\n",
+    "        'sri': {'bt': 3, 'wk': 2, 'all': 2, 'bl': 4}\n",
+    "    }\n",
+    "\n",
+    "    return compos_dict[team_name]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -129,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,20 +165,21 @@
     "    will be part of this class\n",
     "    '''\n",
     "    \n",
-    "    def_compos = {'bt': 4, 'wk': 1, 'all': 2, 'bl': 4}\n",
-    "    \n",
     "    def __init__(self, team_name):\n",
     "        self.team_name = team_name\n",
     "        self.m_played = 0\n",
     "        self.m_wins = 0\n",
-    "        self.team_compos = Team.def_compos\n",
+    "        self.team_compos = reset_team_compos(team_name)\n",
     "        self.players = self.generate_team()\n",
     "        \n",
     "        \n",
     "    def generate_team(self):\n",
-    "        curr_team = {skill: list(np.random.choice(p_names[self.team_name][skill], self.team_compos[skill]))\n",
+    "        curr_team = {skill: list(np.random.choice(p_names[self.team_name][skill], self.team_compos[skill], replace = False))\n",
     "                     for skill in ['bt', 'wk', 'all', 'bl']}\n",
-    "        self.players_obj_list = {curr_team[sk][i]: Player(p_name = curr_team[sk][i], p_skill = sk) for sk in ['bt', 'wk', 'all', 'bl'] for i in range(len(curr_team[sk]))}      \n",
+    "        self.players_obj_list = {\n",
+    "            curr_team[sk][i]: Player(p_name = curr_team[sk][i], p_skill = sk) for sk in [\n",
+    "                'bt', 'wk', 'all', 'bl'] for i in range(len(curr_team[sk]))\n",
+    "        }      \n",
     "        return curr_team\n",
     "    \n",
     "    \n",
@@ -192,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -368,20 +394,20 @@
        "'ind'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "{'bt': ['rdravid', 'klrahul', 'arahane', 'klrahul'],\n",
+       "{'bt': ['sganguly', 'arahane', 'ggambhir', 'rdravid', 'vsehwag'],\n",
        " 'wk': ['dhoni'],\n",
-       " 'all': ['kpandya', 'jadeja'],\n",
-       " 'bl': ['bumrah', 'anehra', 'zkhan', 'hsingh']}"
+       " 'all': ['hpandya', 'kpandya'],\n",
+       " 'bl': ['anehra', 'mdshami', 'bumrah']}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -402,10 +428,10 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['rdravid', 'klrahul', 'arahane', 'dhoni', 'kpandya', 'jadeja', 'bumrah', 'anehra', 'zkhan', 'hsingh'])"
+       "dict_keys(['sganguly', 'arahane', 'ggambhir', 'rdravid', 'vsehwag', 'dhoni', 'hpandya', 'kpandya', 'anehra', 'mdshami', 'bumrah'])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,16 +442,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'dhoni'"
+       "'rdravid'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -435,7 +461,7 @@
        "0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +483,7 @@
        "dict_keys(['ind', 'saf', 'win', 'sri', 'aus'])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -561,16 +587,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "overall runs: 339\n",
-      "balls: 300\n",
-      "wkts: 9\n"
+      "overall runs: 204\n",
+      "balls: 204\n",
+      "wkts: 11\n"
      ]
     },
     {
@@ -602,39 +628,39 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>148</td>\n",
+       "      <td>88</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>82</td>\n",
+       "      <td>67</td>\n",
        "      <td>1</td>\n",
-       "      <td>82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>27</td>\n",
-       "      <td>4</td>\n",
-       "      <td>108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>20</td>\n",
-       "      <td>6</td>\n",
-       "      <td>120</td>\n",
+       "      <td>67</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>13</td>\n",
+       "      <td>15</td>\n",
        "      <td>2</td>\n",
-       "      <td>26</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14</td>\n",
+       "      <td>4</td>\n",
+       "      <td>56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>-1</th>\n",
-       "      <td>9</td>\n",
+       "      <td>11</td>\n",
        "      <td>-1</td>\n",
-       "      <td>-9</td>\n",
+       "      <td>-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -648,16 +674,16 @@
       ],
       "text/plain": [
        "    runs  score  run_sum\n",
-       " 0   148      0        0\n",
-       " 1    82      1       82\n",
-       " 4    27      4      108\n",
-       " 6    20      6      120\n",
-       " 2    13      2       26\n",
-       "-1     9     -1       -9\n",
+       " 0    88      0        0\n",
+       " 1    67      1       67\n",
+       " 2    15      2       30\n",
+       " 4    14      4       56\n",
+       "-1    11     -1      -11\n",
+       " 6     8      6       48\n",
        " 3     1      3        3"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
